add dreams section

--- a/index.html
+++ b/index.html
@@ -108,18 +108,58 @@
     <!-- Banner part End  -->
 
     <!-- Dreams  part Start -->
-     <div class="row dreamsPart">
-      <div class="offset-lg-2 col-lg-6">
-        <div class="leftLowerDiv">
-          <div class="leftUpperDiv">
+     <div class="dreamsPart m-auto">
+      <div class="container d-flex justify-content-around align-items-center">
+        <div class="leftDiv">
+          <div class="leftLowerDiv">
+            <img src="./images/downImg.png" alt="">
+            <div class="leftUpperDiv">
+              <img src="./images/upperImg.png" alt="">
+            </div>
           </div>
         </div>
-        
-      </div>
-      <div class="col-lg-6">
-        <h5>Our Core Features</h5>
+        <div class="leftDiv ms-3">
+          <h5>Our Core Features</h5>
+          <h3>Dream Living Spaces <br> Setting New Build</h3>
+          <div class="perfectflex" >
+            <!-- First Div Start  -->
+          <div class="perfect d-flex justify-content-start align-items-center">
+            <picture>
+              <img src="./images/perfectOne.png" alt="">
+            </picture>
+            <div class="perfectText ">
+              <h4>The Perfect Residency</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisic <br> do eiusmod tempor incididunt ut labore et</p>
+            </div>
+          </div>
+          <!-- First Div End  -->
+          <!-- Second Div Start -->
+          <div class="perfect_sec my-3 d-flex justify-content-start align-items-center">
+            <picture class="ms-3 me-3">
+              <img src="./images/perfectTwo.png" alt="">
+            </picture>
+            <div class="perfectText_sec  ">
+              <h4>The Perfect Residency</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisic <br> do eiusmod tempor incididunt ut labore et</p>
+            </div>
+          </div>
+          <!-- Second Div End  -->
+          <!-- Third Div Start  -->
+          <div class="perfect d-flex justify-content-start align-items-center">
+            <picture>
+              <img src="./images/perfectThree.png" alt="">
+            </picture>
+            <div class="perfectText ">
+              <h4>The Perfect Residency</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisic <br> do eiusmod tempor incididunt ut labore et</p>
+            </div>
+          </div>
+          <!-- Third Div End  -->
+          </div>
+        </div>
       </div>
      </div>
+     
     <!-- Dreams part End  -->
 
     <!-- Banner part Start -->
