fixed navbar problem

--- a/index.html
+++ b/index.html
@@ -40,33 +40,29 @@
         >
           <i class="fa-solid fa-bars"></i>
         </button>
-        <div
-          class="collapse navbar-collapse resgap"
-          id="navbarSupportedContent"
-        >
+        <div class="pt-3 collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav m-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">Home</a>
+              <a class="nav-link" aria-current="page" href="#">Home </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Properties</a>
+              <a class="nav-link" href="#">Properties </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Listings</a>
+              <a class="nav-link" href="#">Listings </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Blog</a>
+              <a class="nav-link" href="#">Blog </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Pages</a>
+              <a class="nav-link" href="#">Page </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="#">Contact </a>
             </li>
           </ul>
           <div class="contact">
-            <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
-            <a href="#" class="contactBtn">Add Listings</a>
+            <a href="#" class="contactBtn">Contact Us </a>
           </div>
         </div>
       </div>
@@ -76,11 +72,11 @@
     <!-- Banner part Start -->
     <div class="bannerPart">
       <div class="container">
-        <div class="row ">
+        <div class="row">
           <div class="bannerContent col-lg-6">
             <!-- <div class="topText d-flex justify-content-start align-items-center"> -->
-              <!-- <i class="pe-1 fa-solid fa-house"></i> -->
-              <p>Real Estate Agency</p>
+            <!-- <i class="pe-1 fa-solid fa-house"></i> -->
+            <p>Real Estate Agency</p>
             <!-- </div> -->
             <h1 class="bannerH1">
               Search and Find <br />
@@ -102,64 +98,79 @@
         </div>
       </div>
       <div class="deals">
-        <img src="./images/Real Estate.png" alt="">
+        <img src="./images/Real Estate.png" alt="" />
       </div>
     </div>
     <!-- Banner part End  -->
 
     <!-- Dreams  part Start -->
-     <div class="dreamsPart m-auto">
+    <div class="dreamsPart m-auto">
       <div class="container d-flex justify-content-around align-items-center">
         <div class="leftDiv">
           <div class="leftLowerDiv">
-            <img src="./images/downImg.png" alt="">
-            <div class="leftUpperDiv">
-              <img src="./images/upperImg.png" alt="">
-            </div>
+            <img src="./images/downImg.png" alt="" />
           </div>
         </div>
         <div class="leftDiv ms-3">
           <h5>Our Core Features</h5>
-          <h3>Dream Living Spaces <br> Setting New Build</h3>
-          <div class="perfectflex" >
+          <h3>
+            Dream Living Spaces <br />
+            Setting New Build
+          </h3>
+          <div class="perfectflex">
             <!-- First Div Start  -->
-          <div class="perfect d-flex justify-content-start align-items-center">
-            <picture>
-              <img src="./images/perfectOne.png" alt="">
-            </picture>
-            <div class="perfectText ">
-              <h4>The Perfect Residency</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisic <br> do eiusmod tempor incididunt ut labore et</p>
+            <div
+              class="perfect d-flex justify-content-start align-items-center"
+            >
+              <picture>
+                <img src="./images/perfectOne.png" alt="" />
+              </picture>
+              <div class="perfectText">
+                <h4>The Perfect Residency</h4>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisic <br />
+                  do eiusmod tempor incididunt ut labore et
+                </p>
+              </div>
             </div>
-          </div>
-          <!-- First Div End  -->
-          <!-- Second Div Start -->
-          <div class="perfect_sec my-3 d-flex justify-content-start align-items-center">
-            <picture class="ms-3 me-3">
-              <img src="./images/perfectTwo.png" alt="">
-            </picture>
-            <div class="perfectText_sec  ">
-              <h4>The Perfect Residency</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisic <br> do eiusmod tempor incididunt ut labore et</p>
+            <!-- First Div End  -->
+            <!-- Second Div Start -->
+            <div
+              class="perfect_sec my-3 d-flex justify-content-start align-items-center"
+            >
+              <picture class="ms-3 me-3">
+                <img src="./images/perfectTwo.png" alt="" />
+              </picture>
+              <div class="perfectText_sec">
+                <h4>The Perfect Residency</h4>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisic <br />
+                  do eiusmod tempor incididunt ut labore et
+                </p>
+              </div>
             </div>
-          </div>
-          <!-- Second Div End  -->
-          <!-- Third Div Start  -->
-          <div class="perfect d-flex justify-content-start align-items-center">
-            <picture>
-              <img src="./images/perfectThree.png" alt="">
-            </picture>
-            <div class="perfectText ">
-              <h4>The Perfect Residency</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisic <br> do eiusmod tempor incididunt ut labore et</p>
+            <!-- Second Div End  -->
+            <!-- Third Div Start  -->
+            <div
+              class="perfect d-flex justify-content-start align-items-center"
+            >
+              <picture>
+                <img src="./images/perfectThree.png" alt="" />
+              </picture>
+              <div class="perfectText">
+                <h4>The Perfect Residency</h4>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisic <br />
+                  do eiusmod tempor incididunt ut labore et
+                </p>
+              </div>
             </div>
-          </div>
-          <!-- Third Div End  -->
+            <!-- Third Div End  -->
           </div>
         </div>
       </div>
-     </div>
-     
+    </div>
+
     <!-- Dreams part End  -->
 
     <!-- Banner part Start -->
