--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <img src="./images/downImg.png" alt="" />
           </div>
         </div>
-        <div class="leftDiv ms-3">
+        <div class="leftDiv lg:ms-3">
           <h5>Our Core Features</h5>
           <h3>
             Dream Living Spaces <br />
