add service section

--- a/index.html
+++ b/index.html
@@ -173,11 +173,135 @@
 
     <!-- Dreams part End  -->
 
-    <!-- Banner part Start -->
-    <!-- Banner part End  -->
+    <!-- space part Start -->
+    <div class="spacePart">
+      <div class="container">
+        <div class="row">
+          <div class="spaceText col-lg-6">
+            <h5>Building Facilities</h5>
+            <h3>
+              Making living spaces <br />
+              More Beutiful
+            </h3>
+            <p>
+              There are many variations of passages of psum available. <br />
+              But the majority have suffered alteration in some form.
+            </p>
+            <!-- First Start  -->
+            <div class="row mt-5">
+              <div
+                class="btnText sm: mb-4  col-lg-6 lg: d-flex justify-content-start align-items-center sm: d-flex justify-content-center align-items-center"
+              >
+                <i class="pe-3 fa-solid fa-circle-check"></i>
+                <h6>
+                  Living rooms are pre-wired <br />
+                  for Surround
+                </h6>
+              </div>
+              <div
+                class="btnText sm: mb-4 col-lg-6 lg: d-flex justify-content-start align-items-center sm: d-flex justify-content-center align-items-center"
+              >
+                <i class="pe-3 fa-solid fa-circle-check"></i>
+                <h6>
+                  Luxurious interior design <br />
+                  and amenities
+                </h6>
+              </div>
+            </div>
+            <!-- First End  -->
+             <!-- Second Start  -->
+            <div class="row">
+              <div
+                class="btnText sm: mb-4  col-lg-6 lg: d-flex justify-content-start align-items-center sm: d-flex justify-content-center align-items-center"
+              >
+                <i class="pe-3 fa-solid fa-circle-check"></i>
+                <h6>
+                  Nestled in the Buckhead <br />
+                  Vinings communities
+                </h6>
+              </div>
+              <div
+                class="btnText sm: mb-4 col-lg-6 lg: d-flex justify-content-start align-items-center sm: d-flex justify-content-center align-items-center"
+              >
+                <i class="pe-3 fa-solid fa-circle-check"></i>
+                <h6>
+                  Private balconies with <br />
+                  stunning views
+                </h6>
+              </div>
+            </div>
+            <!-- Second End  -->
+             <!-- Third Start  -->
+            <div class="row ">
+              <div
+                class="btnText sm: mb-4  col-lg-6 lg: d-flex justify-content-start align-items-center sm: d-flex justify-content-center align-items-center"
+              >
+                <i class="pe-3 fa-solid fa-circle-check"></i>
+                <h6>
+                  A rare combination of inspired <br />
+                  architecture
+                </h6>
+              </div>
+              <div
+                class="btnText sm: mb-4 col-lg-6 lg: d-flex justify-content-start align-items-center sm: d-flex justify-content-center align-items-center"
+              >
+                <i class="pe-3 fa-solid fa-circle-check"></i>
+                <h6>
+                  Outdoor grilling with dining <br />
+                  court
+                </h6>
+              </div>
+            </div>
+            <!-- Third End  -->
+            
+            
+          </div>
+        </div>
+      </div>
+      <a class="videos" href="#">
+        <i class="fa-solid fa-circle-play"></i>
+      </a>
+    </div>
+    <!-- space part End  -->
 
-    <!-- Banner part Start -->
-    <!-- Banner part End  -->
+    <!-- Service part Start -->
+     <div class="servicePart">
+      <div class="container">
+        <div class="row">
+          <div class="serviceText col-lg-12">
+            <h5>Our Service</h5>
+            <h3>Our Main Focus</h3>
+          </div>
+        </div>
+        <div class="row">
+          <!-- First Start -->
+          <div class="serviceCard sm: mb-5 col-lg-4">
+            <img class="serviceImg" src="./images/service Card One.png" alt="">
+            <h3>Buy a Home</h3>
+            <p class="">over 1 million+ homes for sale available on the <br> website, we can match you with a house you will <br> want to call home.</p>
+            <a href="#">Find A Home ----> </a>
+          </div>
+          <!-- First End  -->
+           <!-- Second Start  -->
+          <div class="serviceCard sm: mb-5 col-lg-4">
+            <img class="serviceImg" src="./images/service Card One.png" alt="">
+            <h3>Buy a Home</h3>
+            <p class="">over 1 million+ homes for sale available on the <br> website, we can match you with a house you will <br> want to call home.</p>
+            <a href="#">Find A Home ----> </a>
+          </div>
+          <!-- Second End  -->
+           <!-- Third Start  -->
+          <div class="serviceCard col-lg-4">
+            <img class="serviceImg" src="./images/service Card One.png" alt="">
+            <h3>Buy a Home</h3>
+            <p class="">over 1 million+ homes for sale available on the <br> website, we can match you with a house you will <br> want to call home.</p>
+            <a href="#">Find A Home ----> </a>
+          </div>
+          <!-- Third End  -->
+        </div>
+      </div>
+     </div>
+    <!-- Service part End  -->
 
     <!-- Banner part Start -->
     <!-- Banner part End  -->
