--- a/index.html
+++ b/index.html
@@ -276,23 +276,35 @@
         <div class="row">
           <!-- First Start -->
           <div class="serviceCard sm: mb-5 col-lg-4">
-            <img class="serviceImg" src="./images/service Card One.png" alt="">
+            <div class="serviceImgDiv">
+              <picture>
+                <img class="ServiceImg" src="./images/service Card One.png" alt="">
+              </picture>
+            </div>
             <h3>Buy a Home</h3>
             <p class="">over 1 million+ homes for sale available on the <br> website, we can match you with a house you will <br> want to call home.</p>
             <a href="#">Find A Home ----> </a>
           </div>
           <!-- First End  -->
            <!-- Second Start  -->
-          <div class="serviceCard sm: mb-5 col-lg-4">
-            <img class="serviceImg" src="./images/service Card One.png" alt="">
+           <div class="serviceCard sm: mb-5 col-lg-4">
+            <div class="serviceImgDiv">
+              <picture>
+                <img class="ServiceImg" src="./images/service Card One.png" alt="">
+              </picture>
+            </div>
             <h3>Buy a Home</h3>
             <p class="">over 1 million+ homes for sale available on the <br> website, we can match you with a house you will <br> want to call home.</p>
             <a href="#">Find A Home ----> </a>
           </div>
           <!-- Second End  -->
            <!-- Third Start  -->
-          <div class="serviceCard col-lg-4">
-            <img class="serviceImg" src="./images/service Card One.png" alt="">
+           <div class="serviceCard sm: mb-5 col-lg-4">
+            <div class="serviceImgDiv">
+              <picture>
+                <img class="ServiceImg" src="./images/service Card One.png" alt="">
+              </picture>
+            </div>
             <h3>Buy a Home</h3>
             <p class="">over 1 million+ homes for sale available on the <br> website, we can match you with a house you will <br> want to call home.</p>
             <a href="#">Find A Home ----> </a>
